--- a/colab-notebooks-examples/search/01-keyword-querying-filtering.ipynb
+++ b/colab-notebooks-examples/search/01-keyword-querying-filtering.ipynb
@@ -3,8 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": [],
-      "authorship_tag": "ABX9TyNRIISv0/ilwAn8BxsNs0U0"
+      "provenance": []
     },
     "kernelspec": {
       "name": "python3",
@@ -55,7 +54,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "[Quick Start](https://github.com/joemcelroy/elasticsearch-labs/blob/notebooks-guides/colab-notebooks-examples/search/00-quick-start.ipynb) || **Keyword Quering Filtering** || [Hubrid search with RRF](https://github.com/joemcelroy/elasticsearch-labs/blob/notebooks-guides/colab-notebooks-examples/search/02-hybrid-search-with-rrf.ipynb) || [ELSER](https://github.com/joemcelroy/elasticsearch-labs/blob/notebooks-guides/colab-notebooks-examples/search/03-ELSER.ipynb)"
+        "[Quick Start](https://github.com/joemcelroy/elasticsearch-labs/blob/notebooks-guides/colab-notebooks-examples/search/00-quick-start.ipynb) || **Keyword Querying Filtering** || [Hybrid search with RRF](https://github.com/joemcelroy/elasticsearch-labs/blob/notebooks-guides/colab-notebooks-examples/search/02-hybrid-search-with-rrf.ipynb) || [ELSER](https://github.com/joemcelroy/elasticsearch-labs/blob/notebooks-guides/colab-notebooks-examples/search/03-ELSER.ipynb)"
       ],
       "metadata": {
         "id": "0wgbLWl2udLQ"
@@ -129,7 +128,7 @@
         "id": "q_OE0XVx6_qX",
         "outputId": "6a1d7760-5fb9-4809-e060-e35a398ed3c4"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -346,7 +345,7 @@
         "id": "TRmGYM94gCtb",
         "outputId": "dc58b19f-e585-4d0a-d065-ac3fc18ae123"
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -537,7 +536,7 @@
         "id": "_aI7hnH0ixkG",
         "outputId": "2af27f3d-f9fd-4c7a-cab5-7cb06132582c"
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -733,7 +732,7 @@
         "id": "dCr1pwlqlOE7",
         "outputId": "ae55cd66-0ded-4868-dac5-5815ea317c44"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -922,7 +921,7 @@
         "id": "dTMc-IxPmbtC",
         "outputId": "9acf74fd-bc16-45df-80f3-49504860b10a"
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1127,7 +1126,7 @@
         "id": "8_C-JHRQFDl7",
         "outputId": "be59d18b-5e20-4db0-8697-2e7746251742"
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1305,7 +1304,7 @@
         "id": "GRm9T1vfIsmF",
         "outputId": "d9fb6936-3ffb-4fff-9467-1f7ac7b41490"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1534,7 +1533,7 @@
         "id": "6RH0OALLJPHv",
         "outputId": "338419b0-3e60-4ac9-ddeb-67cac6202ca2"
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
