updates to quick start

--- a/colab-notebooks-examples/search/00-quick-start.ipynb
+++ b/colab-notebooks-examples/search/00-quick-start.ipynb
@@ -60,35 +60,13 @@
     },
     {
       "cell_type": "markdown",
-      "id": "d9cb4609",
-      "metadata": {
-        "id": "d9cb4609"
-      },
-      "source": [
-        "Next we need to import the modules we need."
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "099415ba",
-      "metadata": {
-        "id": "099415ba"
-      },
-      "outputs": [],
-      "source": [
-        "from elasticsearch import Elasticsearch\n",
-        "from urllib.request import urlopen"
-      ]
-    },
-    {
-      "cell_type": "markdown",
       "id": "28AH8LhI-0UD",
       "metadata": {
         "id": "28AH8LhI-0UD"
       },
       "source": [
-        "and add the sentence transformer"
+        "# Setup the Embedding Model\n",
+        "For this example, we're using the all-MiniLM-L6-v2, part of the sentence_transformers library. You can read more about this model in [hugging face](https://huggingface.co/sentence-transformers/all-MiniLM-L6-v2)."
       ]
     },
     {
@@ -130,10 +108,16 @@
       },
       "outputs": [],
       "source": [
+        "from elasticsearch import Elasticsearch\n",
+        "from getpass import getpass\n",
+        "\n",
+        "CLOUD_ID = getpass(\"Elastic Cloud ID\")\n",
+        "CLOUD_PASSWORD = getpass(\"Elastic Password\")\n",
+        "\n",
         "# Create the client instance\n",
         "client = Elasticsearch(\n",
-        "    cloud_id=\"<cloud_id>\",\n",
-        "    basic_auth=(\"elastic\", \"<password>\")\n",
+        "    cloud_id=CLOUD_ID,\n",
+        "    basic_auth=(\"elastic\", CLOUD_PASSWORD)\n",
         ")"
       ]
     },
@@ -216,7 +200,7 @@
         "                \"type\": \"dense_vector\",\n",
         "                \"dims\": 384,\n",
         "                \"index\": \"true\",\n",
-        "                \"similarity\": \"dot_product\"\n",
+        "                \"similarity\": \"cosine\"\n",
         "            }\n",
         "        }\n",
         "    }\n",
@@ -235,7 +219,7 @@
       "source": [
         "### Index test data\n",
         "\n",
-        "Run the following command to upload some test data, containing information about 10 popular programming books."
+        "Run the following command to upload some test data, containing information about 10 popular programming books from this [dataset](https://raw.githubusercontent.com/joemcelroy/elasticsearch-labs/notebooks-guides/colab-notebooks-examples/search/data.json)."
       ]
     },
     {
@@ -247,96 +231,19 @@
       },
       "outputs": [],
       "source": [
-        "books = [\n",
-        "    {\n",
-        "        \"title\": \"The Pragmatic Programmer: Your Journey to Mastery\",\n",
-        "        \"authors\": [\"andrew hunt\", \"david thomas\"],\n",
-        "        \"summary\": \"A guide to pragmatic programming for software engineers and developers\",\n",
-        "        \"publish_date\": \"2019-10-29\",\n",
-        "        \"num_reviews\": 30,\n",
-        "        \"publisher\": \"addison-wesley\"\n",
-        "    },\n",
-        "    {\n",
-        "        \"title\": \"Python Crash Course\",\n",
-        "        \"authors\": [\"eric matthes\"],\n",
-        "        \"summary\": \"A fast-paced, no-nonsense guide to programming in Python\",\n",
-        "        \"publish_date\": \"2019-05-03\",\n",
-        "        \"num_reviews\": 42,\n",
-        "        \"publisher\": \"no starch press\"\n",
-        "    },\n",
-        "    {\n",
-        "        \"title\": \"Artificial Intelligence: A Modern Approach\",\n",
-        "        \"authors\": [\"stuart russell\", \"peter norvig\"],\n",
-        "        \"summary\": \"Comprehensive introduction to the theory and practice of artificial intelligence\",\n",
-        "        \"publish_date\": \"2020-04-06\",\n",
-        "        \"num_reviews\": 39,\n",
-        "        \"publisher\": \"pearson\"\n",
-        "    },\n",
-        "    {\n",
-        "        \"title\": \"Clean Code: A Handbook of Agile Software Craftsmanship\",\n",
-        "        \"authors\": [\"robert c. martin\"],\n",
-        "        \"summary\": \"A guide to writing code that is easy to read, understand and maintain\",\n",
-        "        \"publish_date\": \"2008-08-11\",\n",
-        "        \"num_reviews\": 55,\n",
-        "        \"publisher\": \"prentice hall\"\n",
-        "    },\n",
-        "    {\n",
-        "        \"title\": \"You Don't Know JS: Up & Going\",\n",
-        "        \"authors\": [\"kyle simpson\"],\n",
-        "        \"summary\": \"Introduction to JavaScript and programming as a whole\",\n",
-        "        \"publish_date\": \"2015-03-27\",\n",
-        "        \"num_reviews\": 36,\n",
-        "        \"publisher\": \"oreilly\"\n",
-        "    },\n",
-        "    {\n",
-        "        \"title\": \"Eloquent JavaScript\",\n",
-        "        \"authors\": [\"marijn haverbeke\"],\n",
-        "        \"summary\": \"A modern introduction to programming\",\n",
-        "        \"publish_date\": \"2018-12-04\",\n",
-        "        \"num_reviews\": 38,\n",
-        "        \"publisher\": \"no starch press\"\n",
-        "    },\n",
-        "    {\n",
-        "        \"title\": \"Design Patterns: Elements of Reusable Object-Oriented Software\",\n",
-        "        \"authors\": [\"erich gamma\", \"richard helm\", \"ralph johnson\", \"john vlissides\"],\n",
-        "        \"summary\": \"Guide to design patterns that can be used in any object-oriented language\",\n",
-        "        \"publish_date\": \"1994-10-31\",\n",
-        "        \"num_reviews\": 45,\n",
-        "        \"publisher\": \"addison-wesley\"\n",
-        "    },\n",
-        "    {\n",
-        "        \"title\": \"The Clean Coder: A Code of Conduct for Professional Programmers\",\n",
-        "        \"authors\": [\"robert c. martin\"],\n",
-        "        \"summary\": \"A guide to professional conduct in the field of software engineering\",\n",
-        "        \"publish_date\": \"2011-05-13\",\n",
-        "        \"num_reviews\": 20,\n",
-        "        \"publisher\": \"prentice hall\"\n",
-        "    },\n",
-        "    {\n",
-        "        \"title\": \"JavaScript: The Good Parts\",\n",
-        "        \"authors\": [\"douglas crockford\"],\n",
-        "        \"summary\": \"A deep dive into the parts of JavaScript that are essential to writing maintainable code\",\n",
-        "        \"publish_date\": \"2008-05-15\",\n",
-        "        \"num_reviews\": 51,\n",
-        "        \"publisher\": \"oreilly\"\n",
-        "    },\n",
-        "    {\n",
-        "        \"title\": \"Introduction to the Theory of Computation\",\n",
-        "        \"authors\": [\"michael sipser\"],\n",
-        "        \"summary\": \"Introduction to the theory of computation and complexity theory\",\n",
-        "        \"publish_date\": \"2012-06-27\",\n",
-        "        \"num_reviews\": 33,\n",
-        "        \"publisher\": \"cengage learning\"\n",
-        "    },\n",
-        "]\n",
+        "import json\n",
+        "from urllib.request import urlopen\n",
+        "\n",
+        "url = \"https://raw.githubusercontent.com/joemcelroy/elasticsearch-labs/notebooks-guides/colab-notebooks-examples/search/data.json\"\n",
+        "response = urlopen(url)\n",
+        "books = json.loads(response.read())\n",
         "\n",
         "actions = []\n",
         "for book in books:\n",
         "    actions.append({\"index\": {\"_index\": \"book_index\"}})\n",
-        "    titleEmbedding = model.encode(book[\"title\"]).tolist()\n",
-        "    book[\"title_vector\"] = titleEmbedding\n",
+        "    # Transforming the title into an embedding using the model\n",
+        "    book[\"title_vector\"] = model.encode(book[\"title\"]).tolist()\n",
         "    actions.append(book)\n",
-        "\n",
         "client.bulk(index=\"book_index\", operations=actions)\n"
       ]
     },
@@ -355,7 +262,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 26,
       "id": "f12ce2c9",
       "metadata": {
         "id": "f12ce2c9"
@@ -380,95 +287,95 @@
         "id": "39bdefe0"
       },
       "source": [
-        "##Querying\n",
+        "##Making Queries\n",
         "\n",
-        "Let's start by looking at simple queries which search for a particular value in a particular field."
+        "Now that we have indexed the books, we want to perform a semantic search for books that similarly match the query. We embed the query and perform a search."
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 27,
       "id": "Df7hwcIjYwMT",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "Df7hwcIjYwMT",
-        "outputId": "a5569fa1-163a-45a0-d9d6-bc779feb59db"
+        "outputId": "e12d312f-812b-4c1f-8a0e-eadfc01e3321"
       },
       "outputs": [
         {
-          "name": "stderr",
           "output_type": "stream",
-          "text": [
-            "<ipython-input-11-a3b0b73f7f11>:11: DeprecationWarning: The 'body' parameter is deprecated and will be removed in a future version. Instead use individual parameters.\n",
-            "  response = client.search(index=\"book_index\", body={\n"
-          ]
-        },
-        {
           "name": "stdout",
-          "output_type": "stream",
           "text": [
             "\n",
-            "ID: fGsDIIkB6SgI-NN4Uquf\n",
-            "Publication date: 2008-08-11\n",
-            "Title: Clean Code: A Handbook of Agile Software Craftsmanship\n",
-            "Summary: A guide to writing code that is easy to read, understand and maintain\n",
-            "Score: 0.6285683\n",
-            "\n",
-            "ID: eWsDIIkB6SgI-NN4Uquf\n",
-            "Publication date: 2019-10-29\n",
-            "Title: The Pragmatic Programmer: Your Journey to Mastery\n",
-            "Summary: A guide to pragmatic programming for software engineers and developers\n",
-            "Score: 0.62295747\n",
-            "\n",
-            "ID: gGsDIIkB6SgI-NN4Uquf\n",
-            "Publication date: 2011-05-13\n",
-            "Title: The Clean Coder: A Code of Conduct for Professional Programmers\n",
-            "Summary: A guide to professional conduct in the field of software engineering\n",
-            "Score: 0.5932041\n",
-            "\n",
-            "ID: f2sDIIkB6SgI-NN4Uquf\n",
-            "Publication date: 1994-10-31\n",
-            "Title: Design Patterns: Elements of Reusable Object-Oriented Software\n",
-            "Summary: Guide to design patterns that can be used in any object-oriented language\n",
-            "Score: 0.5909667\n",
-            "\n",
-            "ID: gmsDIIkB6SgI-NN4Uquf\n",
-            "Publication date: 2012-06-27\n",
-            "Title: Introduction to the Theory of Computation\n",
-            "Summary: Introduction to the theory of computation and complexity theory\n",
-            "Score: 0.5843217\n",
-            "\n",
-            "ID: gWsDIIkB6SgI-NN4Uquf\n",
+            "ID: OOlWP4kB-GB5Evg6zHVx\n",
             "Publication date: 2008-05-15\n",
             "Title: JavaScript: The Good Parts\n",
             "Summary: A deep dive into the parts of JavaScript that are essential to writing maintainable code\n",
-            "Score: 0.5775348\n",
+            "Score: 0.8075247\n",
             "\n",
-            "ID: e2sDIIkB6SgI-NN4Uquf\n",
-            "Publication date: 2020-04-06\n",
-            "Title: Artificial Intelligence: A Modern Approach\n",
-            "Summary: Comprehensive introduction to the theory and practice of artificial intelligence\n",
-            "Score: 0.5705365\n",
-            "\n",
-            "ID: emsDIIkB6SgI-NN4Uquf\n",
-            "Publication date: 2019-05-03\n",
-            "Title: Python Crash Course\n",
-            "Summary: A fast-paced, no-nonsense guide to programming in Python\n",
-            "Score: 0.55375147\n",
-            "\n",
-            "ID: fmsDIIkB6SgI-NN4Uquf\n",
-            "Publication date: 2018-12-04\n",
-            "Title: Eloquent JavaScript\n",
-            "Summary: A modern introduction to programming\n",
-            "Score: 0.531436\n",
-            "\n",
-            "ID: fWsDIIkB6SgI-NN4Uquf\n",
+            "ID: NOlWP4kB-GB5Evg6zHVx\n",
             "Publication date: 2015-03-27\n",
             "Title: You Don't Know JS: Up & Going\n",
             "Summary: Introduction to JavaScript and programming as a whole\n",
-            "Score: 0.52609706\n"
+            "Score: 0.6946182\n",
+            "\n",
+            "ID: NelWP4kB-GB5Evg6zHVx\n",
+            "Publication date: 2018-12-04\n",
+            "Title: Eloquent JavaScript\n",
+            "Summary: A modern introduction to programming\n",
+            "Score: 0.66179085\n",
+            "\n",
+            "ID: MOlWP4kB-GB5Evg6zHVx\n",
+            "Publication date: 2019-10-29\n",
+            "Title: The Pragmatic Programmer: Your Journey to Mastery\n",
+            "Summary: A guide to pragmatic programming for software engineers and developers\n",
+            "Score: 0.61159486\n",
+            "\n",
+            "ID: OelWP4kB-GB5Evg6zHVx\n",
+            "Publication date: 2012-06-27\n",
+            "Title: Introduction to the Theory of Computation\n",
+            "Summary: Introduction to the theory of computation and complexity theory\n",
+            "Score: 0.58697784\n",
+            "\n",
+            "ID: N-lWP4kB-GB5Evg6zHVx\n",
+            "Publication date: 2011-05-13\n",
+            "Title: The Clean Coder: A Code of Conduct for Professional Programmers\n",
+            "Summary: A guide to professional conduct in the field of software engineering\n",
+            "Score: 0.57042736\n",
+            "\n",
+            "ID: NulWP4kB-GB5Evg6zHVx\n",
+            "Publication date: 1994-10-31\n",
+            "Title: Design Patterns: Elements of Reusable Object-Oriented Software\n",
+            "Summary: Guide to design patterns that can be used in any object-oriented language\n",
+            "Score: 0.56175697\n",
+            "\n",
+            "ID: M-lWP4kB-GB5Evg6zHVx\n",
+            "Publication date: 2008-08-11\n",
+            "Title: Clean Code: A Handbook of Agile Software Craftsmanship\n",
+            "Summary: A guide to writing code that is easy to read, understand and maintain\n",
+            "Score: 0.55407417\n",
+            "\n",
+            "ID: MulWP4kB-GB5Evg6zHVx\n",
+            "Publication date: 2020-04-06\n",
+            "Title: Artificial Intelligence: A Modern Approach\n",
+            "Summary: Comprehensive introduction to the theory and practice of artificial intelligence\n",
+            "Score: 0.5461982\n",
+            "\n",
+            "ID: MelWP4kB-GB5Evg6zHVx\n",
+            "Publication date: 2019-05-03\n",
+            "Title: Python Crash Course\n",
+            "Summary: A fast-paced, no-nonsense guide to programming in Python\n",
+            "Score: 0.536102\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "<ipython-input-27-f6998147c0ac>:1: DeprecationWarning: The 'body' parameter is deprecated and will be removed in a future version. Instead use individual parameters.\n",
+            "  response = client.search(index=\"book_index\", body={\n"
           ]
         }
       ],
@@ -476,7 +383,7 @@
         "response = client.search(index=\"book_index\", body={\n",
         "    \"knn\": {\n",
         "      \"field\": \"title_vector\",\n",
-        "      \"query_vector\": model.encode(\"Best Project management books?\"),\n",
+        "      \"query_vector\": model.encode(\"Best javascript books?\"),\n",
         "      \"k\": 10,\n",
         "      \"num_candidates\": 100\n",
         "    }\n",
@@ -486,16 +393,18 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "pWYkmofeaSk8",
-      "metadata": {
-        "id": "pWYkmofeaSk8"
-      },
-      "outputs": [],
+      "cell_type": "markdown",
       "source": [
-        "client.indices.delete(index=\"book_index\")"
-      ]
+        "## Next Steps\n",
+        "\n",
+        "In the next guide, we will learn more on how to apply metadata filtering and querying to your search\n",
+        "\n",
+        "[Metadata Filtering and Querying](https://)"
+      ],
+      "metadata": {
+        "id": "nPUBPjzNV0cE"
+      },
+      "id": "nPUBPjzNV0cE"
     }
   ],
   "metadata": {
