--- a/colab-notebooks-examples/search/00-quick-start.ipynb
+++ b/colab-notebooks-examples/search/00-quick-start.ipynb
@@ -101,12 +101,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 30,
       "id": "f38e0397",
       "metadata": {
-        "id": "f38e0397"
+        "id": "f38e0397",
+        "outputId": "ad6df489-d242-4229-a42a-39c5ca19d124",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Elastic Cloud ID··········\n",
+            "Elastic Password··········\n"
+          ]
+        }
+      ],
       "source": [
         "from elasticsearch import Elasticsearch\n",
         "from getpass import getpass\n",
@@ -143,12 +156,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 31,
       "id": "25c618eb",
       "metadata": {
-        "id": "25c618eb"
+        "id": "25c618eb",
+        "outputId": "30a6ba5b-5109-4457-ddfe-5633a077ca9b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{'name': 'instance-0000000000', 'cluster_name': '1a56ad21587c44d3930932eb9fa1d8e8', 'cluster_uuid': 'gX4zlwtlR4qhZpp1SPm4Yg', 'version': {'number': '8.8.2', 'build_flavor': 'default', 'build_type': 'docker', 'build_hash': '98e1271edf932a480e4262a471281f1ee295ce6b', 'build_date': '2023-06-26T05:16:16.196344851Z', 'build_snapshot': False, 'lucene_version': '9.6.0', 'minimum_wire_compatibility_version': '7.17.0', 'minimum_index_compatibility_version': '7.0.0'}, 'tagline': 'You Know, for Search'}\n"
+          ]
+        }
+      ],
       "source": [
         "print(client.info())"
       ]
@@ -262,7 +287,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": 40,
       "id": "f12ce2c9",
       "metadata": {
         "id": "f12ce2c9"
@@ -276,7 +301,10 @@
         "        score = hit['_score']\n",
         "        title = hit['_source']['title']\n",
         "        summary = hit['_source']['summary']\n",
-        "        pretty_output = (f\"\\nID: {id}\\nPublication date: {publication_date}\\nTitle: {title}\\nSummary: {summary}\\nScore: {score}\")\n",
+        "        publisher = hit[\"_source\"][\"publisher\"]\n",
+        "        num_reviews = hit[\"_source\"][\"num_reviews\"]\n",
+        "        authors = hit[\"_source\"][\"authors\"]\n",
+        "        pretty_output = (f\"\\nID: {id}\\nPublication date: {publication_date}\\nTitle: {title}\\nSummary: {summary}\\nPublisher: {publisher}\\nReviews: {num_reviews}\\nAuthors: {authors}\\nScore: {score}\")\n",
         "        print(pretty_output)"
       ]
     },
@@ -294,14 +322,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": 41,
       "id": "Df7hwcIjYwMT",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "Df7hwcIjYwMT",
-        "outputId": "e12d312f-812b-4c1f-8a0e-eadfc01e3321"
+        "outputId": "e63884d7-d4a5-4f5d-ea43-fc2f0793f040"
       },
       "outputs": [
         {
@@ -313,60 +341,90 @@
             "Publication date: 2008-05-15\n",
             "Title: JavaScript: The Good Parts\n",
             "Summary: A deep dive into the parts of JavaScript that are essential to writing maintainable code\n",
+            "Publisher: oreilly\n",
+            "Reviews: 51\n",
+            "Authors: ['douglas crockford']\n",
             "Score: 0.8075247\n",
             "\n",
             "ID: NOlWP4kB-GB5Evg6zHVx\n",
             "Publication date: 2015-03-27\n",
             "Title: You Don't Know JS: Up & Going\n",
             "Summary: Introduction to JavaScript and programming as a whole\n",
+            "Publisher: oreilly\n",
+            "Reviews: 36\n",
+            "Authors: ['kyle simpson']\n",
             "Score: 0.6946182\n",
             "\n",
             "ID: NelWP4kB-GB5Evg6zHVx\n",
             "Publication date: 2018-12-04\n",
             "Title: Eloquent JavaScript\n",
             "Summary: A modern introduction to programming\n",
+            "Publisher: no starch press\n",
+            "Reviews: 38\n",
+            "Authors: ['marijn haverbeke']\n",
             "Score: 0.66179085\n",
             "\n",
             "ID: MOlWP4kB-GB5Evg6zHVx\n",
             "Publication date: 2019-10-29\n",
             "Title: The Pragmatic Programmer: Your Journey to Mastery\n",
             "Summary: A guide to pragmatic programming for software engineers and developers\n",
+            "Publisher: addison-wesley\n",
+            "Reviews: 30\n",
+            "Authors: ['andrew hunt', 'david thomas']\n",
             "Score: 0.61159486\n",
             "\n",
             "ID: OelWP4kB-GB5Evg6zHVx\n",
             "Publication date: 2012-06-27\n",
             "Title: Introduction to the Theory of Computation\n",
             "Summary: Introduction to the theory of computation and complexity theory\n",
+            "Publisher: cengage learning\n",
+            "Reviews: 33\n",
+            "Authors: ['michael sipser']\n",
             "Score: 0.58697784\n",
             "\n",
             "ID: N-lWP4kB-GB5Evg6zHVx\n",
             "Publication date: 2011-05-13\n",
             "Title: The Clean Coder: A Code of Conduct for Professional Programmers\n",
             "Summary: A guide to professional conduct in the field of software engineering\n",
+            "Publisher: prentice hall\n",
+            "Reviews: 20\n",
+            "Authors: ['robert c. martin']\n",
             "Score: 0.57042736\n",
             "\n",
             "ID: NulWP4kB-GB5Evg6zHVx\n",
             "Publication date: 1994-10-31\n",
             "Title: Design Patterns: Elements of Reusable Object-Oriented Software\n",
             "Summary: Guide to design patterns that can be used in any object-oriented language\n",
+            "Publisher: addison-wesley\n",
+            "Reviews: 45\n",
+            "Authors: ['erich gamma', 'richard helm', 'ralph johnson', 'john vlissides']\n",
             "Score: 0.56175697\n",
             "\n",
             "ID: M-lWP4kB-GB5Evg6zHVx\n",
             "Publication date: 2008-08-11\n",
             "Title: Clean Code: A Handbook of Agile Software Craftsmanship\n",
             "Summary: A guide to writing code that is easy to read, understand and maintain\n",
+            "Publisher: prentice hall\n",
+            "Reviews: 55\n",
+            "Authors: ['robert c. martin']\n",
             "Score: 0.55407417\n",
             "\n",
             "ID: MulWP4kB-GB5Evg6zHVx\n",
             "Publication date: 2020-04-06\n",
             "Title: Artificial Intelligence: A Modern Approach\n",
             "Summary: Comprehensive introduction to the theory and practice of artificial intelligence\n",
+            "Publisher: pearson\n",
+            "Reviews: 39\n",
+            "Authors: ['stuart russell', 'peter norvig']\n",
             "Score: 0.5461982\n",
             "\n",
             "ID: MelWP4kB-GB5Evg6zHVx\n",
             "Publication date: 2019-05-03\n",
             "Title: Python Crash Course\n",
             "Summary: A fast-paced, no-nonsense guide to programming in Python\n",
+            "Publisher: no starch press\n",
+            "Reviews: 42\n",
+            "Authors: ['eric matthes']\n",
             "Score: 0.536102\n"
           ]
         },
@@ -374,7 +432,7 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "<ipython-input-27-f6998147c0ac>:1: DeprecationWarning: The 'body' parameter is deprecated and will be removed in a future version. Instead use individual parameters.\n",
+            "<ipython-input-41-f6998147c0ac>:1: DeprecationWarning: The 'body' parameter is deprecated and will be removed in a future version. Instead use individual parameters.\n",
             "  response = client.search(index=\"book_index\", body={\n"
           ]
         }
@@ -395,16 +453,278 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Next Steps\n",
+        "## Filtering\n",
         "\n",
-        "In the next guide, we will learn more on how to apply metadata filtering and querying to your search\n",
+        "Filter context is mostly used for filtering structured data, for example:\n",
         "\n",
-        "[Metadata Filtering and Querying](https://)"
+        "Does this timestamp fall into the range 2015 to 2016?\n",
+        "Is the status field set to \"published\"?\n",
+        "Filter context is in effect whenever a query clause is passed to a filter parameter, such as the filter or must_not parameters in the bool query.\n",
+        "\n",
+        "[Read more](https://)"
       ],
       "metadata": {
-        "id": "nPUBPjzNV0cE"
+        "id": "LdJCpbQMeml5"
       },
-      "id": "nPUBPjzNV0cE"
+      "id": "LdJCpbQMeml5"
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Example: Keyword Filtering\n",
+        "\n",
+        "This is an example of adding a keyword filter to the query.\n",
+        "\n",
+        "It narrows down the results by including only documents where the \"publisher\" field is equal to \"addison-wesley\".\n",
+        "\n",
+        "Overall, the code retrieves the top books that are similar to \"Best javascript books?\" based on their title vectors and have \"addison-wesley\" as the publisher."
+      ],
+      "metadata": {
+        "id": "dRSrPMyFf7w7"
+      },
+      "id": "dRSrPMyFf7w7"
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "response = client.search(index=\"book_index\", body={\n",
+        "    \"knn\": {\n",
+        "      \"field\": \"title_vector\",\n",
+        "      \"query_vector\": model.encode(\"Best javascript books?\"),\n",
+        "      \"k\": 10,\n",
+        "      \"num_candidates\": 100,\n",
+        "      \"filter\": {\n",
+        "          \"term\": {\n",
+        "              \"publisher\": \"addison-wesley\"\n",
+        "          }\n",
+        "      }\n",
+        "    }\n",
+        "})\n",
+        "\n",
+        "pretty_response(response)"
+      ],
+      "metadata": {
+        "id": "WoE0yTchfj3A"
+      },
+      "id": "WoE0yTchfj3A",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Example: Optional Filtering\n",
+        "\n",
+        "TODO: Help the developer understand more about the different types of filtering they can do.\n",
+        "\n",
+        "Provide a link to show more advanced use cases of filtering on date-range, geo-location etc."
+      ],
+      "metadata": {
+        "id": "YY2SrWDtgnF3"
+      },
+      "id": "YY2SrWDtgnF3"
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "response = client.search(index=\"book_index\", body={\n",
+        "    \"knn\": {\n",
+        "      \"field\": \"title_vector\",\n",
+        "      \"query_vector\": model.encode(\"Best javascript books?\"),\n",
+        "      \"k\": 10,\n",
+        "      \"num_candidates\": 100,\n",
+        "      \"filter\": {\n",
+        "          \"bool\": {\n",
+        "              \"should\": [\n",
+        "                  {\n",
+        "                    \"term\": {\n",
+        "                        \"publisher\": \"addison-wesley\"\n",
+        "                    }\n",
+        "                  },\n",
+        "                  {\n",
+        "                    \"term\": {\n",
+        "                        \"authors\": \"robert c. martin\"\n",
+        "                    }\n",
+        "                  }\n",
+        "              ],\n",
+        "\n",
+        "          }\n",
+        "      }\n",
+        "    }\n",
+        "})\n",
+        "\n",
+        "pretty_response(response)"
+      ],
+      "metadata": {
+        "id": "fcDfiJC9g6AX",
+        "outputId": "0909515a-5b94-4863-94c6-e67015baeadf",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "fcDfiJC9g6AX",
+      "execution_count": 43,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "ID: MOlWP4kB-GB5Evg6zHVx\n",
+            "Publication date: 2019-10-29\n",
+            "Title: The Pragmatic Programmer: Your Journey to Mastery\n",
+            "Summary: A guide to pragmatic programming for software engineers and developers\n",
+            "Publisher: addison-wesley\n",
+            "Reviews: 30\n",
+            "Authors: ['andrew hunt', 'david thomas']\n",
+            "Score: 0.61159486\n",
+            "\n",
+            "ID: N-lWP4kB-GB5Evg6zHVx\n",
+            "Publication date: 2011-05-13\n",
+            "Title: The Clean Coder: A Code of Conduct for Professional Programmers\n",
+            "Summary: A guide to professional conduct in the field of software engineering\n",
+            "Publisher: prentice hall\n",
+            "Reviews: 20\n",
+            "Authors: ['robert c. martin']\n",
+            "Score: 0.57042736\n",
+            "\n",
+            "ID: NulWP4kB-GB5Evg6zHVx\n",
+            "Publication date: 1994-10-31\n",
+            "Title: Design Patterns: Elements of Reusable Object-Oriented Software\n",
+            "Summary: Guide to design patterns that can be used in any object-oriented language\n",
+            "Publisher: addison-wesley\n",
+            "Reviews: 45\n",
+            "Authors: ['erich gamma', 'richard helm', 'ralph johnson', 'john vlissides']\n",
+            "Score: 0.56175697\n",
+            "\n",
+            "ID: M-lWP4kB-GB5Evg6zHVx\n",
+            "Publication date: 2008-08-11\n",
+            "Title: Clean Code: A Handbook of Agile Software Craftsmanship\n",
+            "Summary: A guide to writing code that is easy to read, understand and maintain\n",
+            "Publisher: prentice hall\n",
+            "Reviews: 55\n",
+            "Authors: ['robert c. martin']\n",
+            "Score: 0.55407417\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "<ipython-input-43-9b650e64895f>:1: DeprecationWarning: The 'body' parameter is deprecated and will be removed in a future version. Instead use individual parameters.\n",
+            "  response = client.search(index=\"book_index\", body={\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Hybrid Search\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "IUMOK8h-iYrq"
+      },
+      "id": "IUMOK8h-iYrq"
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "response = client.search(index=\"book_index\", body={\n",
+        "    \"size\": 5,\n",
+        "    \"query\": {\n",
+        "        \"match\": {\n",
+        "            \"summary\": \"python\"\n",
+        "        }\n",
+        "    },\n",
+        "    \"knn\": {\n",
+        "        \"field\": \"title_vector\",\n",
+        "        # generate embedding for query so it can be compared to `title_vector`\n",
+        "        \"query_vector\" : model.encode(\"python programming\").tolist(),\n",
+        "        \"k\": 5,\n",
+        "        \"num_candidates\": 10\n",
+        "    },\n",
+        "    \"rank\": {\n",
+        "        \"rrf\": {\n",
+        "            \"window_size\": 5,\n",
+        "            \"rank_constant\": 20\n",
+        "        }\n",
+        "    }\n",
+        "})\n",
+        "\n",
+        "pretty_response(response)"
+      ],
+      "metadata": {
+        "id": "1BwZ-yjli7xA",
+        "outputId": "dd2cc266-acd3-4cef-f7e7-3866a486aa04",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "1BwZ-yjli7xA",
+      "execution_count": 48,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "ID: MelWP4kB-GB5Evg6zHVx\n",
+            "Publication date: 2019-05-03\n",
+            "Title: Python Crash Course\n",
+            "Summary: A fast-paced, no-nonsense guide to programming in Python\n",
+            "Publisher: no starch press\n",
+            "Reviews: 42\n",
+            "Authors: ['eric matthes']\n",
+            "Score: None\n",
+            "\n",
+            "ID: MOlWP4kB-GB5Evg6zHVx\n",
+            "Publication date: 2019-10-29\n",
+            "Title: The Pragmatic Programmer: Your Journey to Mastery\n",
+            "Summary: A guide to pragmatic programming for software engineers and developers\n",
+            "Publisher: addison-wesley\n",
+            "Reviews: 30\n",
+            "Authors: ['andrew hunt', 'david thomas']\n",
+            "Score: None\n",
+            "\n",
+            "ID: OelWP4kB-GB5Evg6zHVx\n",
+            "Publication date: 2012-06-27\n",
+            "Title: Introduction to the Theory of Computation\n",
+            "Summary: Introduction to the theory of computation and complexity theory\n",
+            "Publisher: cengage learning\n",
+            "Reviews: 33\n",
+            "Authors: ['michael sipser']\n",
+            "Score: None\n",
+            "\n",
+            "ID: N-lWP4kB-GB5Evg6zHVx\n",
+            "Publication date: 2011-05-13\n",
+            "Title: The Clean Coder: A Code of Conduct for Professional Programmers\n",
+            "Summary: A guide to professional conduct in the field of software engineering\n",
+            "Publisher: prentice hall\n",
+            "Reviews: 20\n",
+            "Authors: ['robert c. martin']\n",
+            "Score: None\n",
+            "\n",
+            "ID: MulWP4kB-GB5Evg6zHVx\n",
+            "Publication date: 2020-04-06\n",
+            "Title: Artificial Intelligence: A Modern Approach\n",
+            "Summary: Comprehensive introduction to the theory and practice of artificial intelligence\n",
+            "Publisher: pearson\n",
+            "Reviews: 39\n",
+            "Authors: ['stuart russell', 'peter norvig']\n",
+            "Score: None\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "<ipython-input-48-81cbe11a9da4>:1: DeprecationWarning: The 'body' parameter is deprecated and will be removed in a future version. Instead use individual parameters.\n",
+            "  response = client.search(index=\"book_index\", body={\n"
+          ]
+        }
+      ]
     }
   ],
   "metadata": {
