--- a/colab-notebooks-examples/search/00-quick-start.ipynb
+++ b/colab-notebooks-examples/search/00-quick-start.ipynb
@@ -105,10 +105,10 @@
       "id": "f38e0397",
       "metadata": {
         "id": "f38e0397",
-        "outputId": "ad6df489-d242-4229-a42a-39c5ca19d124",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "ad6df489-d242-4229-a42a-39c5ca19d124"
       },
       "outputs": [
         {
@@ -160,10 +160,10 @@
       "id": "25c618eb",
       "metadata": {
         "id": "25c618eb",
-        "outputId": "30a6ba5b-5109-4457-ddfe-5633a077ca9b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "30a6ba5b-5109-4457-ddfe-5633a077ca9b"
       },
       "outputs": [
         {
@@ -556,11 +556,11 @@
         "pretty_response(response)"
       ],
       "metadata": {
-        "id": "fcDfiJC9g6AX",
-        "outputId": "0909515a-5b94-4863-94c6-e67015baeadf",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "fcDfiJC9g6AX",
+        "outputId": "0909515a-5b94-4863-94c6-e67015baeadf"
       },
       "id": "fcDfiJC9g6AX",
       "execution_count": 43,
@@ -621,7 +621,10 @@
       "cell_type": "markdown",
       "source": [
         "## Hybrid Search\n",
-        "\n"
+        "\n",
+        "In this example, we are investigating the combination of two search algorithms: BM25 for text search and HNSW for nearest neighbor search. By combining multiple ranking methods, such as BM25 and an ML model that generates dense vector embeddings, we can achieve the best ranking results. This approach allows us to leverage the strengths of each algorithm and improve the overall search performance.\n",
+        "\n",
+        "TODO: Explain why we use RRF here\n"
       ],
       "metadata": {
         "id": "IUMOK8h-iYrq"
@@ -632,7 +635,6 @@
       "cell_type": "code",
       "source": [
         "response = client.search(index=\"book_index\", body={\n",
-        "    \"size\": 5,\n",
         "    \"query\": {\n",
         "        \"match\": {\n",
         "            \"summary\": \"python\"\n",
@@ -647,7 +649,7 @@
         "    },\n",
         "    \"rank\": {\n",
         "        \"rrf\": {\n",
-        "            \"window_size\": 5,\n",
+        "            \"window_size\": 100,\n",
         "            \"rank_constant\": 20\n",
         "        }\n",
         "    }\n",
@@ -656,14 +658,14 @@
         "pretty_response(response)"
       ],
       "metadata": {
-        "id": "1BwZ-yjli7xA",
-        "outputId": "dd2cc266-acd3-4cef-f7e7-3866a486aa04",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "1BwZ-yjli7xA",
+        "outputId": "26eea86c-5cda-42d0-ba1e-2904e2b7865a"
       },
       "id": "1BwZ-yjli7xA",
-      "execution_count": 48,
+      "execution_count": 51,
       "outputs": [
         {
           "output_type": "stream",
@@ -720,7 +722,7 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "<ipython-input-48-81cbe11a9da4>:1: DeprecationWarning: The 'body' parameter is deprecated and will be removed in a future version. Instead use individual parameters.\n",
+            "<ipython-input-51-3861c4af16a3>:1: DeprecationWarning: The 'body' parameter is deprecated and will be removed in a future version. Instead use individual parameters.\n",
             "  response = client.search(index=\"book_index\", body={\n"
           ]
         }
