--- a/colab-notebooks-examples/search/00-quick-start.ipynb
+++ b/colab-notebooks-examples/search/00-quick-start.ipynb
@@ -9,7 +9,7 @@
       "source": [
         "# Elasticsearch Quick Start\n",
         "\n",
-        "<a target=\"_blank\" href=\"https://colab.research.google.com/github/elasticsearch-labs/colab-notebooks-examples/blob/notebooks-guides/search/00-quick-start.ipynb\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>\n",
+        "<a target=\"_blank\" href=\"https://colab.research.google.com/github/joemcelroy/elasticsearch-labs/blob/notebooks-guides/colab-notebooks-examples/search/00-quick-start.ipynb\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>\n",
         "\n",
         "This interactive notebook will introduce you to the very basics of getting started with simple Elasticsearch queries, using the official [Elasticsearch Python client](https://www.elastic.co/guide/en/elasticsearch/client/python-api/current/connecting.html).\n",
         "We'll run through getting the client up and running, indexing a small data set into Elasticsearch, and performing basic searches against your data."
@@ -725,6 +725,33 @@
             "<ipython-input-51-3861c4af16a3>:1: DeprecationWarning: The 'body' parameter is deprecated and will be removed in a future version. Instead use individual parameters.\n",
             "  response = client.search(index=\"book_index\", body={\n"
           ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "client.indices.delete(index=\"book_index\")"
+      ],
+      "metadata": {
+        "id": "_OAahfg-tqrf",
+        "outputId": "d8f81ba4-cdc9-4e30-edf7-6d5bb16920eb",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "_OAahfg-tqrf",
+      "execution_count": 52,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "ObjectApiResponse({'acknowledged': True})"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 52
         }
       ]
     }
